vendored_parsers/tree-sitter-d/grammar.js
    source_file: ($) =>
      seq(
        optional(choice($._bom, $.shebang)),
        choice($.module_def, repeat($._declaration)),
        optional(seq($.end_file, $._after_eof)),
      ),

    _bom: (_$) => token.immediate("\uFEFF"), // kind of like a special form of whitespace
    escape_sequence: ($) =>
      choice(
        token.immediate(/\\['"?\\abfnrtv]/),
        token.immediate(/\\x[0-9A-Fa-f][0-9A-Fa-f]/),
        token.immediate(/\\[0-7]{1,3}/),
        token.immediate(/\\u[0-9A-Fa-f]{4}/),
        token.immediate(/\\U[0-9A-Fa-f]{8}/),
      ),

    htmlentity: ($) => token.immediate(/\\&[a-zA-Z_]+;/),

    comment: (_) =>
      token(
        choice(
          seq("//", /(\\+(.|\r?\n)|[^\\\n])*/),
          seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/"),
          // nesting comments, we "only" support 5 levels of nesting
          seq(
            "/+",
            repeat(
              choice(
                /[^+]/,
                /\+[^\/]/,
                seq(
                  "/+",
                  repeat(
                    choice(
                      /[^+]/,
                      /\+[^\/]/,
                      seq(
                        "/+",
                        repeat(
                          choice(
                            /[^+]/,
                            /\+[^\/]/,
                            seq(
                              "/+",
                              repeat(
                                choice(
                                  /[^+]/,
                                  /\+[^\/]/,
                                  seq(
                                    "/+",
                                    repeat(choice(/[^+]/, /\+[^\/]/)),
                                    "+/",
                                  ),
                                ),
                              ),
                              "+/",
                            ),
                          ),
                        ),
                        "+/",
                      ),
                    ),
                  ),
                  "+/",
                ),
              ),
            ),
            "+/",
          ),
        ),
      ),

    //
    // Identifier
    //
    identifier: (_$) => /[_\p{XID_Start}][\p{XID_Continue}]*/,

    //
    // Token String
    //
    _token_no_braces: ($) =>
      choice(
        $.identifier,
        $.string_literal,
        $.char_literal,
        $.int_literal,
        $.float_literal,
        $.keyword,
        "/",
        "/=",
        ".",
        "..",
        "...",
        "&",
        "&=",
        "&&",
        "|",
        "|=",
        "||",
        "-",
        "-=",
        "--",
        "+",
        "+=",
        "++",
        "<",
        "<=",
        "<<",
        "<<=",
        ">",
        ">=",
        ">>=",
        ">>>=",
        ">>",
        ">>>",
        "!",
        "!=",
        "(",
        ")",
        "[",
        "]",
        "?",
        ",",
        ";",
        ":",
        "$",
        "=",
        "==",
        "*",
        "*=",
        "%",
        "%=",
        "^",
        "^=",
        "^^",
        "^^=",
        "~",
        "~=",
        "@",
        "=>",
        "#",
        "!in",
        "!is",
      ),

    char: (_$) => token("char"),
    int: (_$) => token("int"),
    float: (_$) => token("float"),
    this: (_$) => token("this"),

    //
    // keywords
    //
    alias: (_$) => token("alias"),
    align: (_$) => token("align"),
    asm: (_$) => token("asm"),
    assert: (_$) => token("assert"),
    auto: (_$) => token("auto"),
    class: (_$) => token("class"),
    const: (_$) => token("const"),
    extern: (_$) => "extern",
    foreach: (_$) => token("foreach"),
    if: (_$) => token("if"),
    new: (_$) => token("new"),
    pure: (_$) => token("pure"),
    static: (_$) => token("static"),
    struct: (_$) => token("struct"),
    template: (_$) => token("template"),
    typeof: (_$) => token("typeof"),
    vector: (_$) => token("__vector"),

    /**************************************************
     *
     * 3.2 MODULES
     *
     */

    _declaration: ($) =>
      choice(
        seq($._declaration2),
        // seq(repeat1($._attribute), $._declaration2),
        seq(repeat1($._attribute), "{", repeat($._declaration), "}"),
      ),

    variable_declaration: ($) =>
      seq(
        repeat($._attribute),
        repeat($.storage_class),
        $.type,
        commaSep1(choice($.declarator, $.bitfield_declarator)),
        ";",
      ),

    _declarator_identifier_list: ($) => prec.right(commaSep1($.identifier)),

    declarator: ($) =>
      prec.right(
        seq(
          $.identifier,
          optional(seq(optional($.template_parameters), "=", $._initializer)),
        ),
      ),

    storage_class: ($) =>
      choice(
        $.linkage_attribute,
        $.align_attribute,
        $.at_attribute,
        $.type_ctor,
        $.deprecated,
        $.static,
        $.extern,
        $.abstract,
        $.final,
        $.override,
        $.synchronized,
        $.auto,
        $.scope,
        $.gshared,
        $.ref,
        $._function_attribute_kwd,
      ),

    //
    // Initializers
    //
    _initializer: ($) => prec.left(choice($._non_void_initializer, $.void)),

    auto_declaration: ($) =>
      prec.right(
        seq(
          repeat($._attribute),
          repeat1($.storage_class),
          commaSep1($._auto_assignment),
          ";",
        ),
      ),

    _auto_assignment: ($) =>
      seq(
        field("variable", $.identifier),
        optional($.template_parameters),
        "=",
        field("value", $._initializer),
      ),

    //
    // Alias Declaration
    //
    alias_declaration: ($) =>
      seq(
        repeat($._attribute),
        choice(
          seq($.alias, $.this, "=", $.identifier, ";"),
          seq($.alias, commaSep1($.alias_initializer), ";"),
          seq(
            $.alias,
            repeat($.storage_class),
            $.type,
            $._declarator_identifier_list,
            ";",
          ),
          seq(
            $.alias,
            repeat($.storage_class),
            $.type,
            $.identifier,
            optional($.template_parameters),
            $.parameters,
            repeat($.member_function_attribute),
            ";",
          ),
        ),
      ),

    alias_initializer: ($) =>
      choice(
        seq(
          $.identifier,
          optional($.template_parameters),
          "=",
          repeat($.storage_class),
          $.type,
        ),
        seq(
          $.identifier,
          optional($.template_parameters),
          "=",
          repeat($.storage_class),
          $.function_literal,
        ),
        seq(
          $.identifier,
          optional($.template_parameters),
          "=",
          repeat($.storage_class),
          $.type,
          $.parameters,
          repeat($.member_function_attribute),
        ),
      ),

    //
    // Alias Assign (type alias)
    //
    alias_reassign: ($) =>
      seq(
        repeat($._attribute),
        prec.dynamic(
          -1,
          choice(
            seq($.identifier, "=", repeat($.storage_class), $.type, ";"),
            seq($.identifier, "=", $.function_literal, ";"),
            seq(
              $.identifier,
              "=",
              repeat($.storage_class),
              $.type,
              $.parameters,
              repeat($.member_function_attribute),
              ";",
            ),
          ),
        ),
      ),

    /**************************************************
     *
     * 3.4 TYPES
     *
     */

    type: ($) =>
      prec.right(seq(repeat($.type_ctor), $._type2, repeat($._type_suffix))),

    type_ctor: ($) => choice($.const, $.immutable, $.inout, $.shared),

    _type2: ($) =>
      prec.right(
        choice(
          $.void,
          $._builtin_type,
          $._qualified_id,
          seq(".", $._qualified_id),
          $.typeof_expression,
          seq($.typeof_expression, ".", $._qualified_id),
          seq($.type_ctor, "(", $.type, ")"),
          $.vector_type,
          $.traits_expression,
          $.mixin_expression,
        ),
      ),

    // dparse says the type is optional, but that seems nonsensical.
    vector_type: ($) => seq($.vector, "(", $.type, ")"),

    // aka fundamental type
    _builtin_type: ($) =>
      choice(
        $.bool,
        $.byte,
        $.ubyte,
        $.char,
        $.short,
        $.ushort,
        $.int,
        $.uint,
        $.long,
        $.ulong,
        $.cent, // deprecated
        $.ucent, // deprecated
        $.wchar,
        $.dchar,
        $.float,
        $.double,
        $.real,
        $.ifloat, // deprecated
        $.idouble, // deprecated
        $.ireal, // deprecated
        $.cfloat, // deprecated
        $.cdouble, // deprecated
        $.creal, // deprecated
        $.size_t,
        $.ptrdiff_t,
        $.string,
        $.cstring,
        $.dstring,
        $.wstring,
        $.noreturn,
      ),

    // we call out void specially because it is not always a basic type
    void: (_$) => "void",

    _type_suffix: ($) =>
      prec.right(
        choice(
          "*",
          seq("[", "]"),
          seq("[", $.expression, "]"),
          seq("[", $.expression, "..", $.expression, "]"),
          seq("[", $.type, "]"),
          seq($.delegate, $.parameters, repeat($.member_function_attribute)),
          seq($.function, $.parameters, repeat($._function_attribute)),
        ),
      ),

    typeof_expression: ($) =>
      seq($.typeof, "(", choice($.expression, $.return), ")"),

    // Mixin Type replaced by mixin_expression (evaluates identically)

    //
    // 3.5 ATTRIBUTES
    //

    align_attribute: ($) =>
      prec.right(seq($.align, optional(seq("(", $.expression, ")")))),

    _attribute: ($) =>
      prec.right(
        choice(
          $.linkage_attribute,
          $.align_attribute,
          $.deprecated_attribute,
          $.pragma_expression,
          $.type_ctor,
          $.private,
          $.package,
          seq($.package, "(", $.module_fqn, ")"),
          $.protected,
          $.public,
          $.export,
          $.static,
          $.extern,
          $.abstract,
          $.final,
          $.override,
          $.synchronized,
          $.auto,
          $.scope,
          $.gshared,
          $.at_attribute,
          $._function_attribute_kwd,
          $.ref,
          $.return,
        ),
      ),

    at_attribute: ($) =>
      prec.right(
        choice(
          seq("@", $.identifier),
          seq("@", $.identifier, $.arguments),
          seq("@", $.template_instance),
          seq("@", $.template_instance, $.arguments),
          seq("@", "(", $._argument_list, ")"),
        ),
      ),

    _function_attribute_kwd: ($) => choice($.nothrow, $.pure),

    _argument_list: ($) => prec.right(commaSep1Comma($.expression)),

    named_argument: ($) =>
      choice($.expression, seq($.identifier, ":", $.expression)),

    _named_argument_list: ($) => prec.right(commaSep1Comma($.named_argument)),

    named_arguments: ($) => seq("(", optional($._named_argument_list), ")"),

    //
    // 3.6 PRAGMAS
    //
    expression_list: ($) => prec.right(commaSep1($._expr)),

    // formally this is AssignExpression, but we use a different
    // structure.  This is just a single expression term, and
    // cannot be used in a comma expression. Expression is
    // used where comma separated expressions are valid.
    //
    // The formal D grammar permits expression lists in many places,
    // but then the compiler rejects almost any attempt to use them.
    // We are electing to reject these in the syntax, rather than
    // in the semantic.  This makes our grammar simpler, and has
    // zero effect on any actual legal code.
    expression: ($) => $._expr,
    _expr: ($) =>
      prec.left(
        choice(
          $.assignment_expression,
          $.ternary_expression,
          $.binary_expression,
          $.ternary_expression,
          $._unary_expr,
        ),
      ),

    call_expression: ($) =>
      prec.left(
        choice(
          seq($._unary_expr, $.named_arguments),
          prec(2, seq($._builtin_type, $.named_arguments)),
          prec(1, seq($.identifier, $.named_arguments)),
          seq($.type, $.named_arguments),
        ),
      ),

    postfix_expression: ($) =>
      prec.left(seq($._unary_expr, field("operator", choice("++", "--")))),

    _unary_expr: ($) =>
      choice(
        $._primary_expr,
        $.unary_expression,
        $.new_expression,
        $.delete_expression,
        $.assert_expression,
        $.cast_expression,
        $.throw_expression,
        $.call_expression,
        $.index_expression,
        $.postfix_expression,
        $.property_expression,
      ),

    assert_expression: ($) => seq($.assert, "(", $.assert_arguments, ")"),

    assert_arguments: ($) =>
      seq(
        $.expression,
        optional(seq(",", commaSep1($.expression))),
        optional(","),
      ),

    //
    // Mixin expression.  The result may be an lvalue.
    //
    new_expression: ($) =>
      prec.left(
        choice(
          seq($.new, $.type),
          seq($.new, $.type, "[", $.expression, "]"),
          seq($.new, $.type, $.arguments),
          seq(
            $.new,
            $.class,
            optional($.arguments),
            optional($._base_class_list),
            $.aggregate_body,
          ),
        ),
      ),

    hex_string: ($) =>
      seq(
        'x"',
        token.immediate(prec(1, /[0-9A-Fa-f\s]*/)),
        token.immediate(/"[cdw]?/),
      ),

    // _unescaped_string_content: (_) => token.immediate(/[^"\\]+/),

    quoted_string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            token.immediate(prec(1, /[^"\\]+/)),
            $.escape_sequence,
            $.htmlentity,
          ),
        ),
        token.immediate(/"[cdw]?/),
      ),

    // interpolated strings
    string_literal: ($) =>
      choice(
        $._string,
        $.raw_string,
        $.hex_string,
        $.quoted_string,
        $.token_string,
        $.interpolated_raw_string,
        $.interpolated_quoted_string,
        $.interpolated_token_string,
      ),

    char_literal: ($) =>
      choice(
        /'[^\\']'/,
        seq("'", choice($.escape_sequence, $.htmlentity), "'"),
      ),

    // NB: array_literals are a super set of associative array literals,
    // and grammatically the two are not distinguishable.
    _parameter_with_attributes: ($) =>
      seq($.parameters, repeat($._function_attribute)),

    _parameter_with_member_attributes: ($) =>
      seq($._parameters, repeat($.member_function_attribute)),

    _declarations_and_statements: ($) => repeat1($._declaration_or_statement),

    block_statement: ($) =>
      seq(
        "{",
        optional($._declarations_and_statements),
        optional($.label),
        "}",
      ),

    expression_statement: ($) => seq($.expression_list, ";"),

    _foreach: ($) => choice($.foreach, $.foreach_reverse),

    foreach_type: ($) =>
      seq(
        repeat(choice($.ref, $.alias, $.enum, $.scope, $.type_ctor)),
        optional($.type),
        $.identifier,
      ),

    //
    // Switch Statement
    //

    asm_statement: ($) =>
      seq(
        $.asm,
        repeat($._function_attribute),
        "{",
        optional($.asm_inline),
        "}",
      ),

    asm_inline: ($) => repeat1($._token_no_braces),

    //
    // Mixin Statement
    //
    aggregate_body: ($) => seq("{", repeat($._declaration), "}"),

    //
    // Struct Initializer
    //
    // renamed to aggregate initializer, as this is used for
    // all aggregate types (classes, enums, interfaces, structs)
    // also struct_member_initializers is inlined here
