vendored_parsers/tree-sitter-d/test/corpus/hexstring.scm
================================================================================
Hex String
================================================================================
auto hex = x"001234 abcdef";
--------------------------------------------------------------------------------

(source_file
  (auto_declaration
    (storage_class
      (auto))
    (identifier)
    (string_literal
      (hex_string))))

================================================================================
Hex String No Whitespace
================================================================================
auto hex = x"001234abcdef";
--------------------------------------------------------------------------------

(source_file
  (auto_declaration
    (storage_class
      (auto))
    (identifier)
    (string_literal
      (hex_string))))

================================================================================
MultiLine Hex String
================================================================================
auto hex = x"001234
             abcdef";
--------------------------------------------------------------------------------

(source_file
  (auto_declaration
    (storage_class
      (auto))
    (identifier)
    (string_literal
      (hex_string))))

================================================================================
MultiLine Hex String with Suffix (D2.108)
================================================================================
auto hex = x"001234
             abcdef"w;
--------------------------------------------------------------------------------

(source_file
  (auto_declaration
    (storage_class
      (auto))
    (identifier)
    (string_literal
      (hex_string))))

================================================================================
Invalid Hex String
:error
================================================================================
auto hex = x"001234 junk
             abcdef"w;
--------------------------------------------------------------------------------
